Add support for editing medicine
